--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Szeli Máté</h1>
 <p> IKT
 <p>9.B 1.csoport
-  <img src="Collage 2.0" alt="Irén és Laci">
+  <img src="Collage 2.0.jpg" alt="Irén és Laci">
   
 </body>
 </html>
