--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
-<h1>Szeli Máté</h1>
-<p> IKT
-<p>9.B 1.csoport
-  <img src="Collage2.0.jpg" alt="Irén és Laci">
-  
+    <h1>Szeli Máté 9.B</h1>  
+    <a href="masodik.html">Szeli
+    <img src="Magamról Kollázs (1).jpg" alt="Ez egy kép"width="400" height="400"> 
+    </a>
 </body>
 </html>
