--- a/negyedik.html
+++ b/negyedik.html
@@ -37,7 +37,6 @@
                 <td>Angol</td>
                 <td>Irodalom</td>
                 <td>Nyelvtan</td>
-                
                 <tr>
 
                     <td>Dig.Kult</td>
@@ -64,18 +63,20 @@
 
                                         
 
-                                    <td></td>
+                                    <td>Tesi</td>
                                     <td>Progalap</td>
                                     <td></td>
                                     <td>Tesi</td>
-                                    <td></td>
+                                    <td>Tesi</td>
                                     <tr>
                                     <td></td>
                                     <td>Progalap</td>
                                     <td></td>
                                     <td>Tesi</td>
-                                    <td></td>                
+                                    <td></td>              
                                 </tr>
+                                        <tr>
+                                        </tr>
     </table>
 </body>
 </html>
