--- a/negyedik.html
+++ b/negyedik.html
@@ -65,7 +65,7 @@
 
                                     <td>Tesi</td>
                                     <td>Progalap</td>
-                                    <td></td>
+                                    <td>Matek</td>
                                     <td>Tesi</td>
                                     <td>Tesi</td>
                                     <tr>
