--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <a href="masodik.html">Szeli
     <img src="Magamról Kollázs (1).jpg" alt="Ez egy kép"width="400" height="400"> 
     </a>
+    <ul>
+  <li><a href="#Második weboldal>Másdik weboldal</a></li>
+      <ul>
 </body>
 </html>
